--- a/week9demo.Rmd
+++ b/week9demo.Rmd
@@ -48,13 +48,25 @@ header-includes:
 \clearpage
 
 # Section 4 {Abhishek Sinha}
-```{r }
+```{r Getting Data, echo = TRUE, message = FALSE, warning = FALSE}
 library(tidyverse)
 data_sec4 <- read.csv("Data/Data_Tables_Criminal_Incidents_Visualisation_Year_Ending_December_2019.txt", header = TRUE, sep = ',')
 ```
 
-```{r}
+```{r structure, echo=FALSE}
 glimpse(data_sec4)
+```
+
+```{r , echo=FALSE}
+unique(data_sec4$Offence.Division)
+```
+
+```{r filtering data, echo=FALSE}
+data_sec4 %>% filter(Offence.Division == "B Property and deception offences")
+
+unique(data_sec4$Offence.Subdivision)
+
+data_sec4 %>% filter(Offence.Subdivision == "B30 Burglary/Break and enter")
 ```
 \clearpage
 
