--- a/week9demo.Rmd
+++ b/week9demo.Rmd
@@ -38,7 +38,7 @@ header-includes:
 \clearpage
 
 # Section 2
-
+In this section, I choose type A offence which is called "Crimes against person".
 ```{r readdata, include=FALSE}
 Criminal_Sec2 <- read.csv("~/5513Tutorial9/Data_Tables_Criminal_Incidents_Visualisation_Year_Ending_December_2019.csv")
 
@@ -50,16 +50,18 @@ Criminal_Sec2_against_person <- Criminal_Sec2 %>%
 
 Criminal_Sec2_against_person %>%
   head(10) %>%
-   kable(booktabs = TRUE, caption = "Criminal Incidents against person in December 2019")
+   kable(booktabs = TRUE, caption = "Criminal Incidents against person in December")
 ```
 
-```{r figureA, fig.cap= "Trend of Criminal Incidents against person in December 2019", include=FALSE}
+```{r figureA, fig.cap= "Trend of Criminal Incidents against person in December", include=FALSE}
 ggplot(Criminal_Sec2_against_person,
-       aes(x= Offence.Subdivision, 
+       aes(x= Year, 
            y = Incidents.Recorded, group = Offence.Subdivision, color = Offence.Subdivision)) +
-  geom_point() +
+  geom_line() +
   facet_wrap(~ Offence.Subdivision, ncol = 2)
 ```
+
+After filter tha data I need, the results are in Table\@ref(tab:tableA). Looking into Figure \@ref(fig:figureA), we could see that there are 8 types subdivision of this type crime, and we could see that most crimes maintain a stable level in their amounts.
 
 \clearpage
 
