--- a/week9demo.Rmd
+++ b/week9demo.Rmd
@@ -66,7 +66,27 @@ data_sec4 %>% filter(Offence.Division == "B Property and deception offences")
 
 unique(data_sec4$Offence.Subdivision)
 
-data_sec4 %>% filter(Offence.Subdivision == "B30 Burglary/Break and enter")
+data_final <- data_sec4 %>% filter(Offence.Subdivision == "B30 Burglary/Break and enter")
+
+data_final
+```
+
+```{r}
+data_final <- data_final %>% 
+  mutate(Incidents.Recorded = as.numeric(Incidents.Recorded))
+glimpse(data_final)
+```
+
+```{r Crime-Rates,echo = FALSE, fig.align = "center", fig.width = 6, fig.cap = "Crime Rate of Burglary"}
+crime_year_offence <- data_final %>%
+  group_by(Year) %>%
+  mutate(Total_Incidents = sum(Incidents.Recorded, na.rm = TRUE))
+
+
+ggplot(crime_year_offence,
+       aes(x = Year,
+           y = Total_Incidents)) + 
+  geom_line()
 ```
 \clearpage
 
